--- a/index.html
+++ b/index.html
@@ -13,22 +13,36 @@
 </head>
 <body>
     <div class="container">
-        <div class="row mt-2">
-            <div class="col-5 border col1">asdsad</div>
-            <div class="col-4 border col1">sadsa</div>
-            <div class="col-2 border col2">asdsa</div>
+        <div class="row mt-2 box ">
+            <div class="col-1 border">.span1</div>
+            <div class="col-1 border">.span2</div>
+            <div class="col-1 border">.span3</div>
+            <div class="col-1 border">.span4</div>
+            <div class="col-1 border">.span5</div>
+            <div class="col-1 border">.span6</div>
+            <div class="col-1 border">.span7</div>
+            <div class="col-1 border">.span8</div>
+            <div class="col-1 border">.span9</div>
+            <div class="col-1 border">.span10</div>
+            <div class="col-1 border">.span11</div>
+            <div class="col-1 border">.span12</div>
         </div>
-        <div class="row box">
-            <div class="col-4 border col3">asdsad</div>
-            <div class="col-3 border coll">sadsa</div>
-            <div class="col-4 border coll1">asdsa</div>      
-            <div class="col-3 border coll2">hhhhh</div>
-            <div class="col-3 border coll3">asdsa</div>
-            <div class="col-3 border coll4">asdsa</div>
+        <div class="row box-card">
+            <div class="col-4 border">.span4</div>
+            <div class="col-4 border">.span4</div>
+            <div class="col-4 border">.span4</div>
         </div>
-      
-  
-
+        <div class="row besh">
+            <div class="col-4 border">.span4</div>
+            <div class="col-8 border">.span8</div>
+        </div>
+        <div class="row card-box">
+            <div class="col-6 border">.span6</div>
+            <div class="col-6 border">.span6</div>
+        </div>
+        <div class="row card-text">
+            <div class="col-12 border">.span12</div>
+        </div>
     </div>
 </body>
 </html>
